Adding Sqlite for new auth structure / faster reloading

--- a/.env
+++ b/.env
@@ -2,3 +2,5 @@ HOST=
 PORT=8001
 JWT_SECRET="Dummy_Key"
 CAMPAIGN_SAVES_DIR="./campaign_data"
+DATABASE_FILE_PATH="./local.db"
+DEFAULT_ADMIN_PASSWORD="admin"
