Refactoring authentication and authorisation

--- a/.env
+++ b/.env
@@ -4,3 +4,4 @@ JWT_SECRET="Dummy_Key"
 CAMPAIGN_SAVES_DIR="./campaign_data"
 DATABASE_FILE_PATH="./local.db"
 DEFAULT_ADMIN_PASSWORD="admin"
+DEFAULT_GAME_PASSWORD="default"
