Updating Registration flow, adding other user flow options

--- a/.env
+++ b/.env
@@ -5,3 +5,4 @@ CAMPAIGN_SAVES_DIR="./campaign_data"
 DATABASE_FILE_PATH="./local.db"
 DEFAULT_ADMIN_PASSWORD="admin"
 DEFAULT_GAME_PASSWORD="default"
+PASSWORD_MIN_LENGTH=4
